package Entrada_saida;

public class Teclado {
    public void adicionarTeclado(){
        System.out.println("Plugar teclado");
    }
}
