package Peças;

public class Memoria {
    public void adicionarMemoria(){
        System.out.println("Adicionando Memória de 8 Gb de ram");
    }
}
