package Entrada_saida;

public class Monitor {
    public void adicionarMonitor(){
        System.out.println("Plugar Monitor");
    }
}
