package Entrada_saida;

public class Mouse {
    public void adicionarMouse(){
        System.out.println("Plugar Mouse");
    }
}
