package Peças;

public class Cpu {
    public void adicionarCpu(){
        System.out.println("Adcionando processador");
    }
}
