@startuml Facade
class Monitor {
    +void AdicionarES();
}
class Mouse {
    +void AdicionarES();
}
class Teclado{
    +void AdicionarES();
}

Monitor --> Facade 

Mouse --> Facade

Teclado --> Facade



class Cpu {
    +void AdicionarPeca();
}

class HD {
    +void AdicionarPeca();
}

class Memoria {
    +void AdicionarPeca();
}

class SO {
    +void AdicionarPeca();
}



Cpu --> Facade

HD --> Facade

Memoria --> Facade

SO --> Facade



class Facade {
    -ES Monitor;
    -ES Mouse;
    -ES Teclado;
    -Peça Cpu;
    -Peça HD;
    -Peça Memoria;
    -Peça SO;

    +void AdicionarMonitor();
    +void AdicionarMouse();
    +void AdicionarTeclado();
    +void AdicionarCpu();
    +void AdicionarHD();
    +void AdicionarMemoria();
    +void AdicionarSO();
}
@enduml